# vilastore-back

./: .env  main.py  pyproject.toml
src/: main.py  models.py
src/pool/: models.py  pool.py
src/routes/: movimentacoes.py  produtos.py
